--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ div {
     border: 1px solid black;
 }
 .banner {
-    background-image: url('../../resources/images/chester.jpg');
+    background-image: url('https://github.com/abdulmubdibindar/abdulmbindar.github.io/main/chester.jpg');
     background-size: cover;
     text-align: center;
     color: whitesmoke;
